@@ -1,5 +1,10 @@
 2006-09-16 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/TreeView_Detail.h,
+	  src/TreeView_Detail.cc: trivial cleanups
+
+2006-09-16 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* src/DialogFeatures.cc: higgiefied the dialog a bit (#353104)
 
 2006-09-16 Bart Hakvoort <hakvoort@cvs.gnome.org>
